--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1955,6 +1955,7 @@
 
     &__social-link {
         margin: 0 8px;
+
         &:hover {
             path {
                 fill: $accent-color;
@@ -1968,62 +1969,211 @@
     }
 }
 
-.latest-post{
+.latest-post {
     padding: 35px 30px 40px;
     border: 1px solid #ececec;
     margin-bottom: 40px;
 
-    &__title{
+    &__title {
         text-transform: uppercase;
-        color:$title-color;
+        color: $title-color;
         font-size: 22px;
         @extend %Roboto-400;
         margin-bottom: 35px;
-       
+
     }
 
-    &__box-title{
-        color:$title-color;
+    &__box-title {
+        color: $title-color;
         font-size: 18px;
         @extend %Roboto-400;
-        line-height:28px;
+        line-height: 28px;
     }
 
-    &__item{
+    &__item {
         margin-bottom: 20px;
         display: flex;
-        & + &{
+
+        &+& {
             border-top: 1px solid #ececec;
             padding-top: 20px;
         }
     }
 
-    &__img-link{
+    &__img-link {
         margin-right: 20px;
         min-width: 80px;
     }
-    &__img{
+
+    &__img {
         width: 80px;
         height: 80px;
         object-fit: cover;
     }
 
-   &__date{
-       padding-left: 26px;
-       position: relative;
+    &__date {
+        padding-left: 26px;
+        position: relative;
 
-       &::after{
-           content:'';
-           position: absolute;
-           left: 0;
-           top: 50%;
-           transform: translateY(-50%);
-           height: 17px;
-           width: 17px;
-           background-image: url('../images/icons/date.svg');
-           background-repeat: no-repeat;
-       }
-   }
+        &::after {
+            content: '';
+            position: absolute;
+            left: 0;
+            top: 50%;
+            transform: translateY(-50%);
+            height: 17px;
+            width: 17px;
+            background-image: url('../images/icons/date.svg');
+            background-repeat: no-repeat;
+        }
+    }
+}
+
+.blog-one {
+
+
+    /*   &__right-img{
+        float: right;
+        margin-left: 30px;
+        margin-bottom: 10px;
+    } */
+
+    &__text {
+        border: 1px solid #ececec;
+        border-top: none;
+        padding: 30px;
+
+        h4 {
+            color: $title-color;
+            font-size: 22px;
+            @extend %Roboto-700;
+            margin: 25px 0;
+        }
+
+        p {
+            margin: 25px 0;
+        }
+
+        blockquote {
+            background-color: $bg-color;
+            color: $title-color;
+            font-size: 22px;
+            @extend %Roboto-400;
+            padding: 35px;
+            border-left: 3px solid $accent-color;
+        }
+
+    }
+
+    &__left-img {
+        float: left;
+        margin-right: 30px;
+        margin-bottom: 10px;
+    }
+
+    &__info {
+        display: flex;
+        margin-bottom: 25px;
+    }
+
+    &__info-link {
+        margin-right: 30px;
+        padding-left: 27px;
+        position: relative;
+
+        &::before {
+            content: '';
+            position: absolute;
+            left: 0;
+            top: 0;
+            height: 17px;
+            width: 17px;
+            background-image: url('../images/icons/date.svg');
+            background-repeat: no-repeat;
+
+        }
+    }
+
+    &__info-link--comment::before {
+        background-image: url('../images/icons/comment.svg')
+    }
+
+    &__info-link--author::before {
+        background-image: url('../images/icons/user-blog.svg');
+    }
+
+    &__form-title {
+        text-transform: uppercase;
+        margin: 35px 0 25px;
+        color: $title-color;
+        font-size: 24px;
+        @extend %Roboto-400;
+    }
+
+    .comments-form {
+        border-bottom: none;
+    }
+
+    .comments-title {
+        margin-bottom: 25px;
+        color: $title-color;
+        font-size: 24px;
+        @extend %Roboto-400;
+        text-transform: uppercase;
+    }
+
+    &__box {
+        margin: 25px 0 35px;
+        display: flex;
+        justify-content: space-between;
+    }
+
+    &__tags,
+    &__share {
+        span {
+            color: $title-color;
+            text-transform: uppercase;
+        }
+    }
+
+    &__share {
+        a {
+            margin-right: 12px;
+            vertical-align: middle;
+
+            path {
+                fill: $deafualt-color;
+                transition: all 0.3s;
+            }
+
+            &:hover {
+                path {
+                    fill: $accent-color;
+                }
+            }
+        }
+    }
+
+    &__author {
+        border-bottom: 1px solid #eceece;
+        display: flex;
+        padding-bottom: 40px;
+        margin-bottom: 40px;
+    }
+
+    &__author-img {
+        width: 140px;
+        height: 140px;
+        margin-right: 30px;
+        object-fit: cover;
+    }
+
+    &__author-name {
+        margin-bottom: 24px;
+        font-size: 24px;
+        @extend %Roboto-700;
+        color: $title-color;
+    }
 }
 
 @import'media';
