--- a/app/index.njk
+++ b/app/index.njk
@@ -16,23 +16,12 @@
     {% include 'app/module/header/header.html' %}
     <main class="main">
 
-        {% include 'app/module/top-slider/top-slider.html' %}
+        {# {% include 'app/module/top-slider/top-slider.html' %}
         {% include 'app/module/category-info/category-info.html' %}
         {% include 'app/module/video-fashion/video-fashion.html' %}
         {% include 'app/module/product/product.html' %}
         {% include 'app/module/promo/promo.html' %}
-        {% include 'app/module/blog/blog.html' %}
-
-       
-
-        
-
-       
-
-      
-
-       
-
+        {% include 'app/module/blog/blog.html' %} #}
      
 
     </main>
