--- a/app/module/header/header.scss
+++ b/app/module/header/header.scss
@@ -5,10 +5,16 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        flex-wrap: wrap;
     }
 }
 
 .menu {
+
+    &__btn {
+        display: none;
+    }
+
     &__list {
         display: flex;
     }
@@ -60,5 +66,117 @@
         text-align: center;
         line-height: 20px;
         color: #ffff;
+    }
+}
+
+
+@media(max-width:1200px) {
+    .header {
+        &__inner {
+            padding-right: 10px;
+        }
+    }
+}
+
+@media(max-width:860px) {
+    .menu {
+        margin-left: auto;
+        order: 1;
+        margin-left: 40px;
+
+        &__list {
+            position: absolute;
+            width: 100%;
+            top: 120px;
+            left: 0;
+            flex-direction: column;
+            align-items: center;
+            z-index: 5;
+            transform: translateY(-300%);
+            transition: all 0.3s;
+            background-color: #ffff;
+
+            &.menu__list--active{
+                transform: translateY(0);
+            }
+        }
+
+        &__list-item+.menu__list-item {
+            margin-left: 0;
+        }
+
+        &__list-item{
+            width: 100%;
+            padding: 0 15px;
+            text-align: center;
+        }
+
+        &__list-link{
+            width: 100%;
+            padding: 12px 0;
+            display: block;
+        }
+
+        &__btn {
+            width: 30px;
+            height: 22px;
+            border: none;
+            background-color: transparent;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            position: relative;
+            padding: 0;
+
+            span {
+                width: 100%;
+                height: 3px;
+                background-color: $title-color;
+            }
+
+            &::after,
+            &::before {
+                content: '';
+                position: absolute;
+                width: 100%;
+                height: 3px;
+                background-color: $title-color;
+
+            }
+
+            &::before {
+                top: 0;
+            }
+
+            &::after {
+                bottom: 0;
+            }
+        }
+    }
+
+    .user-nav {
+        margin-left: auto;
+    }
+}
+
+@media(max-width:500px) {
+    .header {
+        &__inner {
+            padding-right: 0;
+        }
+    }
+
+    .menu {
+        order: 0;
+        &__list{
+            top: 140px;
+        }
+    }
+
+    .user-nav {
+        width: 100%;
+        justify-content: flex-end;
+        margin-top: 35px;
+        padding-right: 15px;
     }
 }
